fixed horizontal shifting by making scrollbar always visible
this is what facebook and quora do

--- a/less/new.less
+++ b/less/new.less
@@ -1,5 +1,7 @@
 @import "variables.less"; // Modify this for custom colors, font-sizes, etc
 
+// scrollbar always visible to prevent horizontal shifting
+html {overflow-y: scroll;}
 
 .no-space [class*="span"] {
     margin: 0 0 0 0 ;
